# app/Http/Requests/Payment/CreatePaymentIntentRequest.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Http\Requests\Payment;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class CreatePaymentIntentRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'amount' => 'required|integer|min:1', // en centimes
+            'currency' => 'nullable|string|size:3'
+        ];
+    }
+}
