# app/Http/Resources/PaymentIntentResource.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class PaymentIntentResource extends JsonResource
+{
+    public function toArray($request): array
+    {
+        return [
+            'client_secret' => $this->client_secret,
+        ];
+    }
+}
